--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@capacitor/cli": "^7.0.1",
     "@capacitor/core": "^7.0.1",
     "core-js": "^3.6.5",
+    "echarts": "^5.6.0",
+    "element-plus": "^2.9.5",
+    "vant": "^4.9.17",
     "vue": "^3.0.0",
     "vue-router": "^4.0.13"
   },
